package com.android.wildex.ui.report

import androidx.compose.runtime.CompositionLocalProvider
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.junit4.createComposeRule
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToIndex
import com.android.wildex.BuildConfig
import com.android.wildex.model.LocalConnectivityObserver
import com.android.wildex.model.report.Report
import com.android.wildex.model.report.ReportRepository
import com.android.wildex.model.user.OnBoardingStage
import com.android.wildex.model.user.User
import com.android.wildex.model.user.UserRepository
import com.android.wildex.model.user.UserType
import com.android.wildex.model.utils.Location
import com.android.wildex.ui.navigation.NavigationTestTags
import com.android.wildex.utils.LocalRepositories
import com.android.wildex.utils.offline.FakeConnectivityObserver
import com.google.firebase.Timestamp
import com.mapbox.common.MapboxOptions
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.runBlocking
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test

@OptIn(ExperimentalCoroutinesApi::class)
class ReportScreenTest {
  private val reportRepository: ReportRepository = LocalRepositories.reportRepository
  private val userRepository: UserRepository = LocalRepositories.userRepository
  private val fakeObserver = FakeConnectivityObserver(initial = true)
  private lateinit var reportScreenViewModel: ReportScreenViewModel

  @get:Rule val composeRule = createComposeRule()

  @Before
  fun setup() = runBlocking {
    MapboxOptions.accessToken = BuildConfig.MAPBOX_ACCESS_TOKEN
    // create reports
    val report1 =
        Report(
            reportId = "reportId1",
            imageURL =
                "https://leesbird.com/wp-content/uploads/2012/01/ring-billed-gull-imm-injured-wing-1c.jpg",
            location = Location(0.3, 0.3, "location1"),
            date = Timestamp.now(),
            description = "description1",
            authorId = "user2",
            assigneeId = null)

    val report2 =
        Report(
            reportId = "reportId2",
            imageURL =
                "https://leesbird.com/wp-content/uploads/2012/01/ring-billed-gull-imm-injured-wing-1c.jpg",
            location = Location(0.8, 0.8),
            date = Timestamp.now(),
            description = "description2",
            authorId = "user3",
            assigneeId = "user1")

    reportRepository.addReport(report1)
    reportRepository.addReport(report2)

    // create users
    val user1 =
        User(
            userId = "user1",
            username = "Bob1",
            name = "Bob",
            surname = "Johnson",
            bio = "I love wildlife.",
            profilePictureURL = "urlBob1",
            userType = UserType.PROFESSIONAL,
            creationDate = Timestamp.now(),
            country = "USA",
            onBoardingStage = OnBoardingStage.COMPLETE)

    val user2 =
        User(
            userId = "user2",
            username = "Alice2",
            name = "Alice",
            surname = "Smith",
            bio = "I love wildlife more.",
            profilePictureURL = "urlAlice1",
            userType = UserType.PROFESSIONAL,
            creationDate = Timestamp.now(),
            country = "England",
            onBoardingStage = OnBoardingStage.COMPLETE)

    val user3 =
        User(
            userId = "user3",
            username = "Charlie3",
            name = "Charlie",
            surname = "Brown",
            bio = "I love wildlife even more.",
            profilePictureURL = "urlCharlie3",
            userType = UserType.REGULAR,
            creationDate = Timestamp.now(),
            country = "Germany",
            onBoardingStage = OnBoardingStage.COMPLETE)

    userRepository.addUser(user1)
    userRepository.addUser(user2)
    userRepository.addUser(user3)

    reportScreenViewModel =
        ReportScreenViewModel(
            reportRepository = reportRepository,
            userRepository = userRepository,
            currentUserId = "user1")
  }

  @After
  fun teardown() {
    LocalRepositories.clearAll()
  }

  @Test
  fun notificationBellClick_invokesCallback() {
    fakeObserver.setOnline(true)
    var notificationClicked = false
    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(
            reportScreenViewModel = reportScreenViewModel,
            onNotificationClick = { notificationClicked = true },
        )
      }
    }
    composeRule.waitForIdle()

    composeRule.onNodeWithTag(NavigationTestTags.NOTIFICATION_BELL).performClick()
    assert(notificationClicked)
  }

  @Test
  fun currentProfilePictureClick_invokesCallback() {
    fakeObserver.setOnline(true)
    var profilePictureClicked = false
    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(
            reportScreenViewModel = reportScreenViewModel,
            onCurrentProfileClick = { profilePictureClicked = true },
        )
      }
    }
    composeRule.waitForIdle()

    composeRule.onNodeWithTag(NavigationTestTags.TOP_BAR_PROFILE_PICTURE).performClick()
    assert(profilePictureClicked)
  }

  @Test
  fun profilePictureClick_invokesCallback() {
    fakeObserver.setOnline(true)
    var profilePictureClicked = ""
    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(
            reportScreenViewModel = reportScreenViewModel,
            onProfileClick = { profilePictureClicked = it },
        )
      }
    }
    composeRule.waitForIdle()

    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForProfilePicture("user2", "author"),
            useUnmergedTree = true)
        .assertIsDisplayed()
        .performClick()
    assert(profilePictureClicked == "user2")
    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForProfilePicture("user3", "author"),
            useUnmergedTree = true)
        .assertIsDisplayed()
        .performClick()
    assert(profilePictureClicked == "user3")
  }

  @Test
  fun submitReportClick_invokesCallback() {
    fakeObserver.setOnline(true)
    var submitReportClicked = false
    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(
            reportScreenViewModel = reportScreenViewModel,
            onSubmitReportClick = { submitReportClicked = true },
        )
      }
    }
    composeRule.waitForIdle()

    composeRule.onNodeWithTag(ReportScreenTestTags.MORE_ACTIONS_BUTTON).performClick()
    composeRule.waitForIdle()
    composeRule
        .onNodeWithTag(ReportScreenTestTags.SUBMIT_REPORT_BUTTON, useUnmergedTree = true)
        .performClick()
    assert(submitReportClicked)
  }

  @Test
  fun testTagsAreCorrectlySetWhenReports() {
    fakeObserver.setOnline(true)
    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(reportScreenViewModel = reportScreenViewModel)
      }
    }
    composeRule.waitForIdle()

    composeRule.onNodeWithTag(NavigationTestTags.NOTIFICATION_BELL).assertIsDisplayed()
    composeRule.onNodeWithTag(NavigationTestTags.TOP_BAR_PROFILE_PICTURE).assertIsDisplayed()
    composeRule.onNodeWithTag(NavigationTestTags.TOP_BAR_TITLE).assertIsDisplayed()
    composeRule.onNodeWithTag(ReportScreenTestTags.REPORT_LIST).assertIsDisplayed()

    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForProfilePicture("user2", "author"),
            useUnmergedTree = true)
        .assertIsDisplayed()
    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForProfilePicture("user3", "author"),
            useUnmergedTree = true)
        .assertIsDisplayed()

    composeRule
        .onNodeWithTag(ReportScreenTestTags.testTagForReport("reportId1", "full"))
        .assertIsDisplayed()
    composeRule
        .onNodeWithTag(ReportScreenTestTags.testTagForReport("reportId2", "full"))
        .assertIsDisplayed()

    composeRule
        .onNodeWithTag(ReportScreenTestTags.MORE_ACTIONS_BUTTON)
        .assertIsDisplayed()
        .performClick()
    composeRule.waitForIdle()
    composeRule
        .onNodeWithTag(ReportScreenTestTags.SUBMIT_REPORT_BUTTON, useUnmergedTree = true)
        .assertIsDisplayed()
    composeRule
        .onNodeWithTag(ReportScreenTestTags.MORE_ACTIONS_BUTTON)
        .assertIsDisplayed()
        .performClick()
    composeRule.waitForIdle()
    composeRule
        .onNodeWithTag(ReportScreenTestTags.SUBMIT_REPORT_BUTTON, useUnmergedTree = true)
        .assertIsNotDisplayed()
  }

  @Test
  fun testTagsAreCorrectlySetWhenNOReports() {
    fakeObserver.setOnline(true)
    runBlocking {
      reportRepository.deleteReport("reportId1")
      reportRepository.deleteReport("reportId2")
      reportScreenViewModel.refreshUIState()
    }

    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(reportScreenViewModel = reportScreenViewModel)
      }
    }
    composeRule.waitForIdle()

    composeRule.onNodeWithTag(NavigationTestTags.NOTIFICATION_BELL).assertIsDisplayed()
    composeRule.onNodeWithTag(NavigationTestTags.TOP_BAR_PROFILE_PICTURE).assertIsDisplayed()
    composeRule.onNodeWithTag(NavigationTestTags.TOP_BAR_TITLE).assertIsDisplayed()
    composeRule.onNodeWithTag(ReportScreenTestTags.NO_REPORT_TEXT).assertIsDisplayed()
  }

  @Test
  fun testTagsAreCorrectlySetWhenUserIsRegular() {
    fakeObserver.setOnline(true)
    runBlocking {
      reportScreenViewModel =
          ReportScreenViewModel(
              reportRepository = reportRepository,
              userRepository = userRepository,
              currentUserId = "user3")
      reportScreenViewModel.refreshUIState()
    }

    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(reportScreenViewModel = reportScreenViewModel)
      }
    }
    composeRule.waitForIdle()

    composeRule
        .onNodeWithTag(ReportScreenTestTags.testTagForReport("reportId1", "full"))
        .assertIsNotDisplayed()
    composeRule
        .onNodeWithTag(ReportScreenTestTags.testTagForReport("reportId2", "full"))
        .assertIsNotDisplayed()
    composeRule.onNodeWithTag(ReportScreenTestTags.NO_REPORT_TEXT).assertIsDisplayed()
  }

  @Test
  fun reportSlider_works() {
    fakeObserver.setOnline(true)
    composeRule.setContent {
      CompositionLocalProvider(LocalConnectivityObserver provides fakeObserver) {
        ReportScreen(reportScreenViewModel = reportScreenViewModel)
      }
    }
    composeRule.waitForIdle()

    composeRule.onNodeWithTag(ReportScreenTestTags.PULL_TO_REFRESH).assertIsDisplayed()
    composeRule.onNodeWithTag(ReportScreenTestTags.REPORT_LIST).assertIsDisplayed()

    composeRule
        .onNodeWithTag(ReportScreenTestTags.testTagForReport("reportId1", "full"))
        .assertIsDisplayed()

    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForReport("reportId1", "image"), useUnmergedTree = true)
        .assertIsDisplayed()

    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForReport("reportId1", "map"), useUnmergedTree = true)
        .assertIsNotDisplayed()

    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForReport("reportId1", "slider"), useUnmergedTree = true)
        .performScrollToIndex(1)

    composeRule
        .onNodeWithTag(
            ReportScreenTestTags.testTagForReport("reportId1", "map"), useUnmergedTree = true)
        .assertIsDisplayed()
  }
}
